cabal-version:   1.18
name:            kempe
version:         0.1.0.0
license:         BSD3
license-file:    LICENSE
copyright:       Copyright: (c) 2020 Vanessa McHale
maintainer:      vamchale@gmail.com
author:          Vanessa McHale
synopsis:        Kempe compiler
description:     Kempe is a stack-based language
category:        Language, Compilers
build-type:      Simple
data-files:
    test/data/*.kmp
    prelude/*.kmp
    lib/*.kmp
    rts.S

extra-doc-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/vmchale/kempe

flag cross
    description: Enable to ease cross-compiling
    default:     False
    manual:      True

library
    exposed-modules:
        Kempe.Lexer
        Kempe.Parser
        Kempe.AST
        Kempe.TyAssign
        Kempe.File
        Kempe.Monomorphize
        Kempe.Pipeline
        Kempe.Shuttle
        Kempe.IR
        Kempe.Asm.X86
        Kempe.Asm.X86.ControlFlow
        Kempe.Asm.X86.Liveness
        Kempe.Asm.X86.Linear

    hs-source-dirs:   src
    other-modules:
        Kempe.Unique
        Kempe.Name
        Kempe.Error
        Kempe.Asm.X86.Type
        Kempe.Proc.Nasm
        Prettyprinter.Ext
        Data.Foldable.Ext

    default-language: Haskell2010
    other-extensions:
        DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable
        FlexibleContexts GeneralizedNewtypeDeriving OverloadedStrings
        StandaloneDeriving TupleSections

    ghc-options:      -Wall -O2
    build-depends:
        base >=4.11 && <5,
        array -any,
        bytestring -any,
        containers -any,
        deepseq -any,
        text -any,
        mtl -any,
        microlens -any,
        transformers -any,
        extra -any,
        prettyprinter >=1.7.0,
        composition-prelude >=1.1.0.1,
        microlens-mtl -any,
        process >=1.2.3.0,
        temporary -any,
        recursion -any

    if !flag(cross)
        build-tool-depends: alex:alex -any, happy:happy -any

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

    if impl(ghc >=8.2)
        ghc-options: -Wcpp-undef

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages

executable kc
    main-is:          Main.hs
    hs-source-dirs:   run
    other-modules:    Paths_kempe
    autogen-modules:  Paths_kempe
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base -any,
        optparse-applicative -any,
        kempe -any

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

    if impl(ghc >=8.2)
        ghc-options: -Wcpp-undef

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages

test-suite kempe-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts "-with-rtsopts=-N -K1K" -Wall
    build-depends:
        base -any,
        kempe -any,
        tasty -any,
        tasty-hunit -any,
        bytestring -any,
        prettyprinter >=1.7.0,
        deepseq -any

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

    if impl(ghc >=8.2)
        ghc-options: -Wcpp-undef

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages

benchmark kempe-bench
    type:             exitcode-stdio-1.0
    main-is:          Bench.hs
    hs-source-dirs:   bench
    default-language: Haskell2010
    ghc-options:      -O3 -Wall
    build-depends:
        base -any,
        kempe -any,
        bytestring -any,
        criterion -any

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

    if impl(ghc >=8.2)
        ghc-options: -Wcpp-undef

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages
