cabal-version:   3.0
name:            kempe
version:         0.1.1.2
license:         BSD-3-Clause
license-file:    LICENSE
copyright:       Copyright: (c) 2020 Vanessa McHale
maintainer:      vamchale@gmail.com
author:          Vanessa McHale
synopsis:        Kempe compiler
description:     Kempe is a stack-based language
category:        Language, Compilers
build-type:      Simple
data-files:
    test/data/*.kmp
    test/err/*.kmp
    test/examples/*.kmp
    test/golden/*.out
    test/golden/*.ir
    test/harness/*.c
    examples/*.kmp
    prelude/*.kmp
    lib/*.kmp
    docs/manual.pdf

extra-doc-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/vmchale/kempe

flag no-par
    description: Disable concurrent build
    manual:      True

flag cross
    description: Enable to ease cross-compiling
    default:     False
    manual:      True

library kempe-modules
    exposed-modules:
        Kempe.File
        Kempe.Lexer
        Kempe.Parser
        Kempe.AST
        Kempe.TyAssign
        Kempe.Monomorphize
        Kempe.Pipeline
        Kempe.Shuttle
        Kempe.Inline
        Kempe.Module
        Kempe.Check.Pattern
        Kempe.IR
        Kempe.IR.Opt
        Kempe.Asm.X86
        Kempe.Asm.X86.ControlFlow
        Kempe.Asm.Liveness
        Kempe.Asm.X86.Linear

    hs-source-dirs:   src
    other-modules:
        Kempe.Check.Restrict
        Kempe.Check.TopLevel
        Kempe.Check.Lint
        Kempe.Unique
        Kempe.Name
        Kempe.Error
        Kempe.Error.Warning
        Kempe.AST.Size
        Kempe.Asm.X86.Type
        Kempe.Asm.Type
        Kempe.IR.Type
        Kempe.Proc.Nasm
        Prettyprinter.Ext
        Data.Foldable.Ext
        Data.Copointed

    default-language: Haskell2010
    other-extensions:
        DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable
        FlexibleContexts GeneralizedNewtypeDeriving OverloadedStrings
        StandaloneDeriving TupleSections DeriveAnyClass

    ghc-options:      -Wall
    build-depends:
        base >=4.9 && <5,
        array -any,
        bytestring -any,
        containers >=0.6.0.0,
        deepseq -any,
        text -any,
        mtl -any,
        microlens -any,
        transformers -any,
        extra >=1.7.4,
        prettyprinter >=1.7.0,
        composition-prelude >=2.0.2.0,
        microlens-mtl -any,
        process >=1.2.3.0,
        temporary -any

    if !flag(no-par)
        ghc-options: -j +RTS -A32m -RTS

    if !flag(cross)
        build-tool-depends: alex:alex -any, happy:happy -any

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

    if impl(ghc >=8.2)
        ghc-options: -Wcpp-undef

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages

executable kc
    main-is:          Main.hs
    hs-source-dirs:   run
    other-modules:    Paths_kempe
    autogen-modules:  Paths_kempe
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base -any,
        optparse-applicative -any,
        kempe-modules -any,
        prettyprinter >=1.7.0,
        bytestring -any

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

    if impl(ghc >=8.2)
        ghc-options: -Wcpp-undef

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages

test-suite kempe-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    other-modules:
        Parser
        Type
        Backend
        Abi

    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts "-with-rtsopts=-N -K1K" -Wall
    build-depends:
        base -any,
        kempe-modules -any,
        tasty -any,
        tasty-hunit -any,
        bytestring -any,
        prettyprinter >=1.7.0,
        deepseq -any,
        tasty-golden -any,
        text -any,
        composition-prelude -any

    if !flag(no-par)
        ghc-options: -j +RTS -A32m -RTS

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

    if impl(ghc >=8.2)
        ghc-options: -Wcpp-undef

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages

test-suite kempe-golden
    type:             exitcode-stdio-1.0
    main-is:          Golden.hs
    hs-source-dirs:   test
    other-modules:    Harness
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts "-with-rtsopts=-N -K1K" -Wall
    build-depends:
        base -any,
        kempe-modules -any,
        tasty -any,
        bytestring -any,
        process -any,
        temporary -any,
        filepath -any,
        tasty-golden -any

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

    if impl(ghc >=8.2)
        ghc-options: -Wcpp-undef

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages

benchmark kempe-bench
    type:             exitcode-stdio-1.0
    main-is:          Bench.hs
    hs-source-dirs:   bench
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base -any,
        kempe-modules -any,
        bytestring -any,
        criterion -any,
        prettyprinter -any,
        text -any

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

    if impl(ghc >=8.2)
        ghc-options: -Wcpp-undef

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages
